# sysrepo-plugin-ietf-interfaces

./: CMakeLists.txt  README.md  interfaces-plugin.c
doc/: systemd.netdev.mhtml  systemd.network.mhtml
src/: config.c  config.h  interfaces-plugin.c  interfaces-plugin.cpp  interfaces.cpp  srgetxpath.cpp  subscription-test.cpp
tests/: a.json  b.json  create_if.json  create_system.json  eth0.network.temp  eth1.network.temp  test_00_dummy.cpp  test_01_create-if.sh
yang/: ietf-interfaces.json  ietf-system.json  source.txt
